3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Changes for CVS:

doc/metaserver, doc/Makefile.in: Add metaserver file which describes
    working of metaserver and format of data fields.
socket/metaserver.c: Add reporting of inbytes, output bytes, and uptime in
    seconds to notification of metaserver
MSW 2001-05-24

server/player.c
common/living.c
include/libproto.h:  New experience loss on death policy implemented.
(As per consensus.)  3 levels or 20%, whichever is less.  
  --PeterM 5/24/2001

server/spell_util.c: Fix typo in polymorph code (when enabled in config.h)
MSW 2001-05-24

server/disease.c: replace disease->owner check with get_owner.
MSW 2001-05-24

server/pets.c: pet_move - fix formatting to be 4 space indentation.
   if we remove the monster, free it here instead of having move_monster
   do it.  Add check for was_destroyed after first call to move_ob -
   crashes have been observed in that function, and I believe that is the
   cause.
server/monster.c: move_monster: let pet_move free the pet if necessary.
server/spell_effect.c: Clear sleeping flag of monsters when casting
   summon pet monster (or other creatures).  Some archs have this 
   value on by default, so the monsters don't follow the player until
   an enemy is found.
MSW 2001-05-22

socket/item.c: Don't raise player to top of stack when they look at
   something.  I think this may be causing server crashes in some
   circumstances - plus its not really needed anyways.
socket/loop.c: block_until_new_connections: Add call to flush_old_maps
   so maps are reset while waiting for a new player.
MSW 2001-05-22

configure.in, configure: Fix png and Xpm library detection.  Suggested