@@ -18,6 +18,11 @@ else.  With this, include the file(s) that you changed.
 
 Changes for CVS:
 
+lib/artifacts: Reduce potency of Poison artifact foods.
+server/apply.c: When eating poison artifact foods, hit player with poison
+    attacktype instead of just subtracting hp.  This way people with
+    poison resistance get proper benefit.  MSW 2001-05-24
+
 doc/metaserver, doc/Makefile.in: Add metaserver file which describes
     working of metaserver and format of data fields.
 socket/metaserver.c: Add reporting of inbytes, output bytes, and uptime in
